# py-gisce-client

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  releaserc.toml  requirements-build.txt  requirements-dev.txt  setup.py
.github/workflows/: release.yml  tests.yml
gisce/: __init__.py  base.py  cli.py  compat.py  msgpack.py  restapi.py  xmlprc_wst.py  xmlrpc.py
packaging/: pygisceclient_pyinstaller.py
skill/: SKILL.md
tests/: test_cli.py  test_msgpack_services.py  test_password_prompting.py  test_request_id.py  test_xmlrpc_request_id.py
