[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
tag_format = "v{version}"
version_variables = ["setup.py:version"]
build_command = "python -m pip install build==1.3.0 && python -m build"
commit_message = "chore(release): {version}"
commit_parser = "conventional"
major_on_zero = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.remote]
name = "origin"
type = "github"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*", "release-assets/*"]
upload_to_vcs_release = true
